<resources>
    <string name="app_name">Fleet</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="name">Name*</string>
    <string name="phone">Phone*</string>
    <string name="street">Street</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_record">Add Contact</string>
    <string name="all_record">Quick Look</string>
    <string name="contacts">Contacts</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_settings">Settings</string>
    <string name="delete_all">Delete All</string>
    <string name="info_max_150">Info(Max. 150)</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="Call">Number</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="create_new">Create New</string>
    <string name="my_contacts">My Contacts</string>
    <string name="number">Number</string>
    <string name="intro">Add some more Information about the Person.</string>
    <string name="update_contact">Update Contact</string>
    <string name="update">Update</string>
    <string name="move_to_phone">Move To Phone</string>
    <string name="share_contact">Share Contact</string>
    <string name="edit">Edit</string>
    <string name="introduction">Introduction</string>
    <string name="mobile">Mobile</string>
    <string name="add_email">Add Email</string>
    <string name="add_location">Add Location</string>
    <string name="anti_clockwise">antiClockwise</string>
    <string name="clockwise">Clockwise</string>
    <string name="title_activity_call_log">Your Call Log</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_info">App Info</string>
</resources>
