<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/link_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/share"
        app:showAsAction="collapseActionView"/>
    <item android:id="@+id/info"
        android:title="@string/about"
        android:icon="@drawable/ic_action_description"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/about"
                android:title="@string/app_info"
                app:showAsAction="never" />
            <item
                android:id="@+id/policy"
                android:title="@string/privacy_policy"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>