<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/edit_contact"
        android:actionLayout="@android:layout/simple_dropdown_item_1line"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/export_contact"
        android:actionLayout="@android:layout/simple_dropdown_item_1line"
        android:icon="@drawable/ic_transfer_within_a_station"
        android:title="@string/move_to_phone"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_contact"
        android:actionLayout="@android:layout/simple_dropdown_item_1line"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/share_contact"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/delete_contact"
        android:actionLayout="@android:layout/simple_dropdown_item_1line"
        android:icon="@drawable/ic_delete_forever"
        android:title="@string/delete"
        app:showAsAction="collapseActionView" />

</menu>