<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kt_ki.dbpractice.AddActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/name_field"
        android:hint="@string/name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/name_field"
        android:layout_alignRight="@+id/name_field"
        android:layout_alignEnd="@+id/name_field"
        android:layout_marginTop="10dp"
        android:id="@+id/email_field"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/street_field"
        android:layout_below="@+id/phone_field"
        android:layout_alignLeft="@+id/phone_field"
        android:layout_alignStart="@+id/phone_field"
        android:layout_marginTop="13dp"
        android:hint="@string/street" />

    <Button
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/save"
        android:layout_alignRight="@+id/city_field"
        android:layout_alignEnd="@+id/city_field"
        android:id="@+id/cancel" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/city_field"
        android:layout_alignStart="@+id/city_field"
        android:layout_marginBottom="27dp" />

    <MultiAutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_auto"
        android:hint="@string/info_max_300"
        android:gravity="left"
        android:maxLength="300"
        android:lines="3"
        android:layout_below="@+id/city_field"
        android:layout_alignLeft="@+id/city_field"
        android:layout_alignStart="@+id/city_field"
        android:layout_alignRight="@+id/city_field"
        android:layout_alignEnd="@+id/city_field" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone_field"
        android:layout_marginTop="12dp"
        android:hint="@string/phone"
        android:layout_below="@+id/email_field"
        android:layout_alignLeft="@+id/email_field"
        android:layout_alignStart="@+id/email_field" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/city_field"
        android:layout_marginTop="13dp"
        android:hint="@string/city"
        android:layout_below="@+id/street_field"
        android:layout_alignLeft="@+id/street_field"
        android:layout_alignStart="@+id/street_field" />

</RelativeLayout>
