<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.contact_app.fleet.AddActivity">

    <LinearLayout
        android:id="@+id/ll_new_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/update_contact"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/ll_new_contact"
        android:background="@color/colorAccent"
        android:orientation="horizontal" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_line">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="48dp">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:drawableLeft="@drawable/ic_person"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="8dp" />

            <EditText
                android:id="@+id/email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/name_field"
                android:layout_alignRight="@+id/name_field"
                android:layout_below="@+id/name_field"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp" />

            <EditText
                android:id="@+id/phone_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/email_field"
                android:layout_alignStart="@+id/email_field"
                android:layout_below="@+id/email_field"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="8dp" />

            <EditText
                android:id="@+id/street_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/phone_field"
                android:layout_alignStart="@+id/phone_field"
                android:layout_below="@+id/phone_field"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_add_location"
                android:hint="@string/street"
                android:inputType="textPostalAddress"
                android:padding="8dp" />

            <EditText
                android:id="@+id/city_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/street_field"
                android:layout_alignStart="@+id/street_field"
                android:layout_below="@+id/street_field"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_location_city"
                android:hint="@string/city"
                android:inputType="textPersonName"
                android:padding="8dp" />

            <EditText
                android:id="@+id/tv_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/city_field"
                android:layout_alignLeft="@+id/city_field"
                android:layout_alignRight="@+id/city_field"
                android:layout_alignStart="@+id/city_field"
                android:layout_below="@+id/city_field"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_info"
                android:hint="@string/info_max_300"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLength="300"
                android:scrollY="@dimen/activity_vertical_margin"
                android:scrollbars="vertical" />
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>

