<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.contact_app.fleet.AddActivity">

    <LinearLayout
        android:id="@+id/ll_new_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteText">

        <TextView
            android:id="@+id/tv_heading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:gravity="center"
            android:text="@string/create_new"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/dark_gray_background"
        android:orientation="horizontal" />

    <ScrollView
        android:id="@+id/sv_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="48dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_a_photo"
                app:civ_border_color="#00000000"
                app:civ_border_width="2dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center">

                <EditText
                    android:id="@+id/name_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_gray_background"
                    android:drawableLeft="@drawable/ic_person"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_gray_background"
                    android:drawableLeft="@drawable/ic_email"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phone_field_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/phone_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_gray_background"
                    android:digits="0123456789+"
                    android:drawableLeft="@drawable/ic_phone"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/street_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_gray_background"
                    android:drawableLeft="@drawable/ic_add_location"
                    android:hint="@string/street"
                    android:inputType="textPostalAddress"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/city_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_gray_background"
                    android:drawableLeft="@drawable/ic_location_city"
                    android:hint="@string/city"
                    android:inputType="textPersonName"
                    android:padding="8dp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/tv_auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/dark_gray_background"
                    android:drawableLeft="@drawable/ic_info"
                    android:hint="@string/info_max_300"
                    android:inputType="textMultiLine"
                    android:lines="2"
                    android:maxLength="300"
                    android:scrollY="@dimen/activity_vertical_margin"
                    android:scrollbars="vertical" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
