<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sv_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_all_data_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">


            <LinearLayout
                android:id="@+id/ll_image_holder"
                android:layout_width="match_parent"
                android:layout_height="@dimen/nav_header_height"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_person_pin"
                    android:contentDescription="@string/contacts" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/whiteText"
                    android:textIsSelectable="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_information_holder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="48dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="24dp"

                    android:background="@drawable/tv_back_border"
                    android:drawableLeft="@drawable/ic_phone"
                    android:gravity="center|start"
                    android:focusable="false"
                    android:hint="@string/number"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/tv_emailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_phoneNumber"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/tv_back_border"
                    android:drawableLeft="@drawable/ic_email"
                    android:gravity="center|start"
                    android:focusable="false"
                    android:hint="@string/Email"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_emailAddress"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/tv_back_border"
                    android:drawableLeft="@drawable/ic_location"
                    android:gravity="center|start"
                    android:focusable="false"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:hint="@string/Location"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_location"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="10dp"

                    android:background="@drawable/tv_back_border"
                    android:gravity="center|start"
                    android:hint="@string/intro"
                    android:isScrollContainer="true"
                    android:padding="16dp"
                    android:textIsSelectable="true" />

            </RelativeLayout>
        </LinearLayout>

    </android.support.design.widget.CoordinatorLayout>
</ScrollView>